# Forward_Demo

./: CMakeLists.txt  README.md  main.cpp
include/: DAC_include.h  readme.md
net/: readme  shift.cfg
net/activation/: readme
net/weights/: readme
net/weights_out/: readme
src/: Network.cpp  Network.h  image_proc.h  quantize.h  readme.md
